Updated kwak-orth-ps version.
Should now use much less memory and crash less.

--- a/kwakwala/convert-file.html
+++ b/kwakwala/convert-file.html
@@ -8,6 +8,6 @@
     <h1 class="loader">Loading Script...</h1>
 </body>
 
-<script src="convert-file.js"></script>
+<script src="convert-file.min.js"></script>
 
 </html>
