--- a/kwakwala/convert-text.html
+++ b/kwakwala/convert-text.html
@@ -8,6 +8,6 @@
     <h1 class="loader">Loading Script...</h1>
 </body>
 
-<script src="convert-text.js"></script>
+<script src="convert-text.min.js"></script>
 
 </html>
