Added Arabic as Orthography option.

--- a/kwakwala/index.html
+++ b/kwakwala/index.html
@@ -8,6 +8,7 @@
   <li><a href="convert-text.html">Kwak'wala Orthography converter, text input version</a></li>
   <li><a href="convert-file.html">Kwak'wala Orthography converter, file input version</a></li>
   <li><a href="chart.html">Experimental Kwak'wala Syllabic Orthography Chart</a></li>
+  <li><a href="chart-arabic.html">Experimental Kwak'wala Arabic Orthography Chart</a></li>
 </ul>
 <p></p>
 
