Updated Arabic orthography chart.
Added the glottal stop and some more combined letters.

--- a/kwakwala/chart-arabic.html
+++ b/kwakwala/chart-arabic.html
@@ -230,7 +230,7 @@ in a word, then the final letter will be in its Isolated form.</p>
 <td>&#x640;&#x64a;&#x652;</td>
 </tr>
 <tr>
-<td>&#39;Y</td>
+<td>&#39;Y**</td>
 <td>&#x626;&#x652;</td>
 <td>&#x626;&#x652;&#x640;</td>
 <td>&#x640;&#x626;&#x652;&#x640;</td>
@@ -398,6 +398,13 @@ in a word, then the final letter will be in its Isolated form.</p>
 <td>&#x640;&#x647;</td>
 </tr>
 <tr>
+<td>&#x294;</td>
+<td>&#x621;</td>
+<td>&#x621;</td>
+<td>&#x621;</td>
+<td>&#x621;</td>
+</tr>
+<tr>
 <td><strong>Grubb</strong></td>
 <td><strong>Isolated</strong></td>
 <td><strong>Initial</strong></td>
@@ -464,8 +471,8 @@ in a word, then the final letter will be in its Isolated form.</p>
 <tr>
 <td>Le</td>
 <td>&#x644;&#x627;</td>
-<td>&#x644;&#x627;&#x640;</td>
-<td>&#x640;&#x644;&#x627;&#x640;</td>
+<td>&#x644;&#x627;</td>
+<td>&#x640;&#x644;&#x627;</td>
 <td>&#x640;&#x644;&#x627;</td>
 </tr>
 <tr>
@@ -539,11 +546,26 @@ in a word, then the final letter will be in its Isolated form.</p>
 <td>&#x640;&#x623;&#x650;</td>
 </tr>
 <tr>
+<td>&#39;I**</td>
+<td>&#x626;</td>
+<td>&#x626;&#x640;</td>
+<td>&#x640;&#x626;&#x640;</td>
+<td>&#x640;&#x626;</td>
+</tr>
+<tr>
 <td>&#39;O</td>
 <td>&#x625;&#x64f;</td>
 <td>&#x625;&#x64f;</td>
 <td>&#x640;&#x625;&#x64f;</td>
 <td>&#x640;&#x625;&#x64f;</td>
 </tr>
+<tr>
+<td>&#39;U</td>
+<td>&#x624;</td>
+<td>&#x624;</td>
+<td>&#x640;&#x624;</td>
+<td>&#x640;&#x624;</td>
+</tr>
 </tbody>
 </table>
+<p>** Yeh with Hamzah is usually depicted without the two dots below.</p>
