--- a/thorts/thoughts_100.html
+++ b/thorts/thoughts_100.html
@@ -132,7 +132,8 @@ also view it as a value judgement:
 
 <p>
 Who would you sacrifice: Someone who's had a (relatively) normal and fulfilled life, or someone
-who's lived almost completely isolated from society and hasn't had ... Now, obviously I'm putting
+who's lived almost completely isolated from society and hasn't had much of a childhood (hell, she
+was so lonely she turned her sword into an imaginary friend <del>with benefits</del>). Now, obviously I'm putting
 my thumb on the scale with those descriptions, but I still think they're somewhat applicable.
 What's annoying is that the game doesn't seem to acknowledge this; if you choose to sacrifice
 Takemaru, his only reasoning for being picked over Kyoshika is that she's a girl. While this is
@@ -143,7 +144,13 @@ route you can get from sacrificing Takemaru is the Sex Cult route, which is kind
 </p>
 
 <p>
-(I'll continue this point later)
+Like, you choose not to sacrifice Kyoshika because you want her to value herself and make genuine
+friendships, and instead you get the route where everyone loses their minds and can't think of 
+anything other than boning Takumi. I fucking hate it (i.e. I hate that this series of choices
+leads to this route; I have... mixed feelings on the route itself). I also hate that they
+<i>clearly</i> could have put a branch to another route here (by rejecting Yugamu's sex pills),
+but they didn't. I guess they needed more endings for the (checks list) "Conspiracy" route and the
+"Box of Blessings" route.
 </p>
 
 <p>
@@ -152,6 +159,12 @@ In the V'ehxness route, Tsubasa (and the game, by extension, I think? I'd have t
 over again) doesn't consider the possibility that the reason Takumi/the Player chose her was that they
 believed she wouldn't be able to go through with it, as a roundabout way of avoiding sacrificing anyone.
 </p>
+
+<p>
+I guess you could also make the choice kind of a metatextual one? Like, do you prioritize narrative
+tightness or thematic coherence. I don't know; I've always been terrible at this stuff.
+</p>
+
 
 
 <h3>Other points I'll expand on later</h3>
@@ -166,7 +179,9 @@ anyone else.
 <p>
 Also Kyoshika's sacrifice scene is pretty much a copy of Tenko's death from V3 and Peko's
 death from 2. Basically, a character with low self-worth dies/sacrifices herself and isn't
-appreciated by the other characters until after/just before her death.
+appreciated by the other characters until after/just before her death. They're the kind of
+characters that Kodaka loves killing for pathos, instead of seeing them handle their
+failures. 
 (yes I'm still mad about Tenko's death 8 years later).
 </p>
 
@@ -178,15 +193,28 @@ I what I mean, but one of my favourite moments is when Kurara sacrifices herself
 Kyoshika in the Zombie route. It's a great moment for both of them: Maskless Kurara overcomes
 her timidity to save her <del>girl</del>friend, while Kyoshika has to reckon with someone she
 loves sacrificing herself to save her. I want more moments like that. I have my issues with the
-zombie route, but that moment was worth it.
+zombie route, but that moment was worth it. 
 </p>
 
 <img src="imgs/kyo_ku_01.jpg" alt="Kyoshika crying while cradling a dying Kurara in her arms." width=700>
 
 <p>
+Hell, the weird sadist in me likes seeing my favourite characters survive, but suffer a lot along
+the way. Honestly, that's why I'm not too interested in some of the "everyone survives" endings.
+I'd love a alternate version of (at least some of) endings 1-40 where you save Kyoshika instead
+of Takemaru, but I know that's unreasonable. Now that I've watched what happens in ending 1,
+it would be roughly the same to have Kyoshika in place of Takemaru, but you could make it
+interesting if you had Kyoshika take the place of Takumi instead. It'd be a great inversion
+of what happens on day 15; instead of sacrificing herself to save everyone else, she'd have
+to sacrifice everyone else to carry out their will. 
+</p>
+
+<p>
 Well who knows. Maybe they'll release some DLC with more routes (they won't). Oh come on,
 I can dream (no you can't). I mean, that would be the smart way to ensure that not everything
 is spoiled immediately right? Not releasing the whole game at the start (you're being delusional).
+But surely it would be an easy way for them to make more money without having to make a whole new
+game (you're underestimating the amount of work it takes).
 </p>
 
 <h3>Appendix? I guess?</h3>
@@ -195,6 +223,7 @@ is spoiled immediately right? Not releasing the whole game at the start (you're 
 So far, the endings I have are (in order of getting them):
 </p>
 
+<p>
 42
 41
 47 
@@ -222,6 +251,7 @@ So far, the endings I have are (in order of getting them):
 93
 98
 97 
+</p>
 
 <p>
 Yes, I know that doesn't add up to 30. I probably forgot to write down a few
