Updated 100 line thoughts

--- a/thorts/thoughts_100.html
+++ b/thorts/thoughts_100.html
@@ -5,8 +5,10 @@
 <head>
 <title> Some Thorts&trade; on The Hundred Line </title>
 <meta property="og:title" content="Some Thoughts on The Hundred Line">
-<meta property="og:description" content="I have some issues with this game.">
+<meta property="og:description" content="(It's pretty much all about Kyoshika)">
 <meta property="og:image" content="imgs/kyoshika_exterm.jpg"/>
+
+<link href="basic.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -27,7 +29,7 @@ writing. I'll also likely be rambling on randomly and not stay on topic.
 
 <p>
 So. Anyway. What was I going to talk about? Oh, right, Hundred Line. I have
-some thorts(tm) about some of the branching nature of this game, and how
+some thorts&trade; about some of the branching nature of this game, and how
 the branches seem to have been written.
 </p>
 
@@ -75,7 +77,7 @@ Danganronpa 1/2/V3.
 </p>
 
 <p>
-Note that I have not played all branches (I only have 30 endings so far*), but
+Note that I have not played all branches (I only have 30 endings so far* (edit: up to 54ish now)), but
 I have looked at guides on how to get all possible endings, so I know the general
 structure.
 </p>
@@ -196,7 +198,7 @@ loves sacrificing herself to save her. I want more moments like that. I have my 
 zombie route, but that moment was worth it. 
 </p>
 
-<img src="imgs/kyo_ku_01.jpg" alt="Kyoshika crying while cradling a dying Kurara in her arms." width=700>
+<img src="imgs/kyo_ku_01.jpg" alt="Kyoshika crying while cradling a dying Kurara in her arms." title="This is the most romantic CG in the entire game." width=700>
 
 <p>
 Hell, the weird sadist in me likes seeing my favourite characters survive, but suffer a lot along
@@ -206,7 +208,8 @@ of Takemaru, but I know that's unreasonable. Now that I've watched what happens 
 it would be roughly the same to have Kyoshika in place of Takemaru, but you could make it
 interesting if you had Kyoshika take the place of Takumi instead. It'd be a great inversion
 of what happens on day 15; instead of sacrificing herself to save everyone else, she'd have
-to sacrifice everyone else to carry out their will. 
+to sacrifice everyone else to carry out their will. If she survived it, she could start a
+family with Nozomi and Kamyuhn (or however you spell her name).
 </p>
 
 <p>
@@ -216,6 +219,67 @@ is spoiled immediately right? Not releasing the whole game at the start (you're 
 But surely it would be an easy way for them to make more money without having to make a whole new
 game (you're underestimating the amount of work it takes).
 </p>
+
+<h3>More Thoughts!</h3>
+
+(update 2025-05-24)
+
+<p>
+Alright, I finished some more routes and endings. Including the SF route and some other stuff.
+I got partway through the Killing Game route, up to around day 58ish. If you've played the route
+you can guess why. Being a Kyoshika stan is suffering.
+</p>
+
+<p>
+Anyway, this route has another Kyoshika sacrifice (big surprise). But, uh... I do sort of notice
+a trend in how Kyoshika's sacrifices are treated vs. how the moments where others sacrifice
+themselves for her. Anytime someone else sacrifices themself for Kyoshika, it's a very
+sudden decision. This never leaves Kyoshika with enough time to talk through her emotions with
+the other person in question. On the other hand, whenever Kyoshika wants to sacrifice herself
+(except ending 75), she always explains that she's completely prepared to die for anyone.
+No one ever rebuts her desire to die by pointing out they're just as willing to die for her
+(even though both Takumi and Kurara are <i>clearly</i> willing to do so in other routes).
+Hell, no one expresses <i>why</i> they love her and want her to survive. She never gets the
+chance to process how others feel about her. Outside of the Romance Route, she never brings
+up that she's basically been alone her whole life and has no one left to return to on the
+satellite. It would be an interesting moment for her to bring that up as a reason why she
+should die, only for it to backfire completely on her. 
+</p>
+
+<div class="row">
+  <div class="column">
+    <img src="imgs/kyo_alone_01.jpg" alt="Kyoshika: Hahahaha! I'd never spoken to people my own age until I got here, but..." style="width:100%">
+  </div>
+  <div class="column">
+    <img src="imgs/kyo_alone_02.jpg" alt="Takumi (thinking): She smiled about it like it was nothing to worry about..." style="width:100%">
+  </div>
+  <div class="column">
+    <img src="imgs/kyo_alone_03.jpg" alt="Takumi (thinking): But to me, there was something sad about that overly innocent grin." style="width:100%">
+  </div>
+</div>
+
+
+<p>
+It's especially odd not to bring this up in the Killing Game route, which touches on Darumi's
+willingness to die and fucked-up home life, as well as Nozomi's shitty relationship with her
+mother. It's especially poignant with Nozomi, considering a lot of her relationship with Eva
+in this route is about realising how much her mother used her without reciprocating her love.
+</p>
+
+<p>
+You could easily do that in the route by having Takumi, Yugamu, or even Tsubasa forefeit their
+points so that Kyoshika would no longer be on the bottom of the leaderboard. If Takumi were to
+forefeit his points, the route could continue on from either Nozomi or Kyoshika's point of view.
+</p>
+
+<p>
+I mean c'mon. Are you really gonna tease us by having Kyoshika fantasize about putting Nozomi
+in bondage and <i>not</i> explore their relationship more? (yes they will. obviously) shut up 
+i need this.
+</p>
+
+<img src="imgs/kyo_shibari.jpg" alt="Kyoshika: I volunteer to be the one to bind up Lady Nozomi! I'll make her look absolutely perfect in a diamond body harness!" title="In Japanese, the term she uses is 亀甲縛り, or Tortoise Shell Shibari. This is also what made me a diehard KyoZomi shipper." style="width:60%">
+
 
 <h3>Appendix? I guess?</h3>
 
@@ -250,11 +314,37 @@ So far, the endings I have are (in order of getting them):
 45
 93
 98
-97 
+97
+
+78
+77
+79
+80
+81
+82
+83
+84
+36
+34
+35
+100
+56
+53
+54
+55
+60
+59
+99
+58
+57
+92
+91
+90
+89
 </p>
 
 <p>
-Yes, I know that doesn't add up to 30. I probably forgot to write down a few
+I probably forgot to write down a few
 of the short endings I got along the way.
 </p>
 
