--- a/thorts/thoughts_100.html
+++ b/thorts/thoughts_100.html
@@ -156,10 +156,11 @@ but they didn't. I guess they needed more endings for the (checks list) "Conspir
 </p>
 
 <p>
-Okay, back to the point about the game not really being interested in the reasonings for one's choice.
+<del>Okay, back to the point about the game not really being interested in the reasonings for one's choice.
 In the V'ehxness route, Tsubasa (and the game, by extension, I think? I'd have to play the whole route
 over again) doesn't consider the possibility that the reason Takumi/the Player chose her was that they
-believed she wouldn't be able to go through with it, as a roundabout way of avoiding sacrificing anyone.
+believed she wouldn't be able to go through with it, as a roundabout way of avoiding sacrificing anyone.</del>
+I decided after a bit that this point isn't very good.
 </p>
 
 <p>
@@ -270,6 +271,34 @@ in this route is about realising how much her mother used her without reciprocat
 You could easily do that in the route by having Takumi, Yugamu, or even Tsubasa forefeit their
 points so that Kyoshika would no longer be on the bottom of the leaderboard. If Takumi were to
 forefeit his points, the route could continue on from either Nozomi or Kyoshika's point of view.
+</p>
+
+<p>
+If you wanted the routes to diverge more but don't want to do the "forefeit points" thing, you
+could have Tsubasa intentionally fall to last place for Kyoshika's sake. It would make sense
+from <i>her</i> development's point of view, since earlier in the route she laments not being
+able to help Hiruko. It would also make the route diverge more, since they wouldn't be able
+to repair the rocket or construct the baby jar; they'd have to find some other way to stop
+the missile attack. <del>e.g. maybe Kyoshika's hemoanima allows her to absorb Shion while
+keeping his mind separate/intact. Also maybe have them ally with the Futurians to end
+the Invader Hunt, since there's no rule about non-participants attacking the sponsor. 
+You could have Kyoshika offer some of her blood to one of the 
+commanders (probably Dahl'xia) to share her memories as proof of her intentions.
+And then of course you could make another swordfucking joke.</del>
+</p>
+
+<p>
+Oh yeah, and also it would be a good time for a persuasion minigame for Kyoshika, since
+it would be (slightly) different to have one just about valuing yourself. The thing is,
+the correct answers couldn't be extrinsic things, e.g. "We need you because only you can...".
+</p>
+
+<p>
+e.g. the correct answers would be things like:
+<br>
+"You're more than just what makes you useful."
+<br>
+"You don't need to suppress your emotions to make us feel better."
 </p>
 
 <p>
