Added more thoughts

--- a/thorts/thoughts_100.html
+++ b/thorts/thoughts_100.html
@@ -307,7 +307,105 @@ in bondage and <i>not</i> explore their relationship more? (yes they will. obvio
 i need this.
 </p>
 
-<img src="imgs/kyo_shibari.jpg" alt="Kyoshika: I volunteer to be the one to bind up Lady Nozomi! I'll make her look absolutely perfect in a diamond body harness!" title="In Japanese, the term she uses is 亀甲縛り, or Tortoise Shell Shibari. This is also what made me a diehard KyoZomi shipper." style="width:60%">
+<img src="imgs/kyo_shibari.jpg" alt="Kyoshika: I volunteer to be the one to bind up Lady Nozomi! I'll make her look absolutely perfect in a diamond body harness!" title="In Japanese, the term she uses is 亀甲縛り, or Tortoise Shell Shibari. This is also what made me a diehard KyoZomi shipper." style="width:50%">
+
+<h3>Some more thoughts</h3>
+
+<p>
+yes I'm just adding new sections instead of going back and incorporating my points into
+previous sections. yes I'm lazy.
+</p>
+
+<p>
+actually I forgot what I was going to write in this section, so never mind
+</p>
+
+<h3>The part where I basically just write fanfic</h3>
+
+<p>
+(as if i wasn't doing that already)
+<br>
+(get ready for some of the worst fanfic writing you've ever seen)
+</p>
+
+<p>
+okay maybe "write" is a bit of a generous term. a better word is probably
+"plot out".
+</p>
+
+<p>
+Okay, so back to the killing game route. Let's say Tsubasa willingly sacrifices
+herself to save Kyoshika.  While I haven't played past this point in the route,
+it would make sense to give Kyoshika a route where she can actually get close
+to some of her friends (other than just Kurara and Takumi). Especially considering
+how her willingness to die mirrors Darumi's quite closely. Anyway, you could have
+her ally with some of the commanders to take down the sponsor. Kyoshika is able
+to successfully negotiate with due to her empathy and her (former?) outlook on
+being a "warrior". However, at one point, the twins try to attack the commanders to 
+increase their score, but Kyoshika winds up fatally wounding them while trying to
+subdue them. She offers to absorb both of their hemoanima so that they
+can at least always be together in death. 
+</p>
+
+<p>
+Anyway, at some point she visits the oracle who gives the commanders their titles,
+and discovers that her hemoanima has the ability to sustain Shion (and also maybe
+the ability to "purify" the hemoanima of anyone she absorbs. so she wouldn't have
+the whole "double Eito" making her go insane thing*). After absorbing Shion to
+stop the missiles, she also defeats and absorbs V'ehxness. 
+While now being the (likely) strongest being on the planet and having the respect
+of a large segment of the Futur(i)ans, she's asked to become the figurehead/leader
+of the Futurian cause.
+</p>
+
+<p>
+If she agrees, she goes... way further and says that she'll use the revive-o-matic
+to effectively live forever and protect the planet for eternity, reasoning that
+someone who has experience fending off one invasion (from humanity) is better suited
+to protect against any future invasions. The others are saddened at her willingness
+to throw away her dream of having a (relatively) normal family and life, ironically
+going against what they were trying to persuade her against earlier in the route,
+just in the opposite direction. She offers her friends to absorb their hemoanima 
+once they're about to die, so they can (metaphorically) live forever within her. 
+Cut to 10,000 years later. She presides over a thriving planet, but for the most
+part, remains in the background. After being alive for so long, she has indeed
+become the greatest swordswoman in history, though not in the way she expected.
+She moves from place to place, settling down for a few years in each place, and
+runs a small Magadori-kyuu swordsmanship dojo wherever she lives. One day, while
+talking with Shion, he teases her about having bedded thousands of men and women
+over the years, which is overheard by some of her disciples. She admits she is
+immortal, and in order to get them to not tell, she agrees to tell stories about
+some of those people. One of the disciples asks if she can remember every one of
+the people she's bedded clearly, to which she pauses before tearfully saying yes.
+She says that she truly loved each and every one of them, and despite the sadness
+she feels at their deaths, she has absolutely no regrets about having loved and
+lost them. She then tells stories of the exploits of Takumi, Yugamu, Darumi, and
+Nozomi. However, she also mentions that she's only there thanks to the sacrifices
+of Moko, Kurara, and Tsubasa, and cries at the realisation that she only knew
+them for a few weeks. Despite this, she's able to continue on talking about the
+lives of her first friends/lovers.
+</p>
+
+<p>
+If she disagrees... uh... I haven't thought about this branch as much. I guess
+she starts a normal life with an unorthodox family consisting of herself, Darumi,
+Takumi, and Yugamu (and maybe Nozomi?). The others are all glad that she's
+putting herself first for once in her life. and uh... I'll expand on this later.
+</p>
+
+
+
+<p>
+okay that's probably pretty cringy/corny/hacky/etc... (obligatory thing I had
+to write to slightly lower my own embarrassment at what I'm writing.)
+</p>
+
+<img src="imgs/tsubasa_fanfic.jpg" alt="Tsubasa screaming in embarassment at Takumi reading the fanfic she wrote in middle school" title="How I feel when someone reads my terrible fanfic plotting." style="width:50%">
+
+<p>
+*This is something I thought up while thinking of another possible route. It doesn't
+have much impact in this one.
+</p>
 
 
 <h3>Appendix? I guess?</h3>
