slight update to thorts

--- a/thorts/thoughts_100.html
+++ b/thorts/thoughts_100.html
@@ -320,6 +320,12 @@ previous sections. yes I'm lazy.
 actually I forgot what I was going to write in this section, so never mind
 </p>
 
+<p>
+oh right I think I was gonna write about how Kyoshika, despite appearing
+very emotionally open, actually hides a lot of her feelings so as not to
+make others feel bad.
+</p>
+
 <h3>The part where I basically just write fanfic</h3>
 
 <p>
@@ -335,7 +341,7 @@ okay maybe "write" is a bit of a generous term. a better word is probably
 
 <p>
 Okay, so back to the killing game route. Let's say Tsubasa willingly sacrifices
-herself to save Kyoshika.  While I haven't played past this point in the route,
+herself to save Kyoshika&dagger;.  While I haven't played past this point in the route,
 it would make sense to give Kyoshika a route where she can actually get close
 to some of her friends (other than just Kurara and Takumi). Especially considering
 how her willingness to die mirrors Darumi's quite closely. Anyway, you could have
@@ -359,10 +365,15 @@ of the Futurian cause.
 </p>
 
 <p>
+(also i didn't realise this while I was writing this, but this would make Shion
+Kyoshika's Stand. She'd love that)
+</p>
+
+<p>
 If she agrees, she goes... way further and says that she'll use the revive-o-matic
 to effectively live forever and protect the planet for eternity, reasoning that
 someone who has experience fending off one invasion (from humanity) is better suited
-to protect against any future invasions. The others are saddened at her willingness
+to protect against any future invasions**. The others are saddened at her willingness
 to throw away her dream of having a (relatively) normal family and life, ironically
 going against what they were trying to persuade her against earlier in the route,
 just in the opposite direction. She offers her friends to absorb their hemoanima 
@@ -387,6 +398,21 @@ lives of her first friends/lovers.
 </p>
 
 <p>
+Oh wait, also, with her infinite lifespan, she takes up writing/drawing manga
+at some point and writes the stories of her friends. Also, I feel like she should
+adopt a separate name as a pseudo-deity; maybe something like 俠信和? idk what to
+use for the last kanji; could be 和, 家, 華, 敢, or something else.
+</p>
+
+<p>
+**Also, with her ability to cleanse those with hemoanima consumed by hate, she
+feels compelled to take on this task in perpetuity as (she believes herself to
+be) the only one able to handle this task. But that's part of her entire issue;
+she feels compelled to do things if (she believes) she's the only person who can
+do it.
+</p>
+
+<p>
 If she disagrees... uh... I haven't thought about this branch as much. I guess
 she starts a normal life with an unorthodox family consisting of herself, Darumi,
 Takumi, and Yugamu (and maybe Nozomi?). The others are all glad that she's
@@ -407,6 +433,22 @@ to write to slightly lower my own embarrassment at what I'm writing.)
 have much impact in this one.
 </p>
 
+<p>
+&dagger;Basically, Kyoshika and Yugamu would go out during the day to go
+hunting while Takumi and Tsubasa stay in the lounge watching the scoreboard.
+After returning back after raising Kyoshika's ranking, Kyoshika decides to
+stay with Tsubasa until it's time to take the poison. At first, Tsubasa tries
+to put on a brave face, since she's worried Kyoshika will try to get back
+in last place if she finds out how scared she is. However, Kyoshika senses
+this and assures Tsubasa she will respect her decision. She urges Tsubasa
+not to hide her feelings. Tsubasa starts crying as Kyoshika holds her in her
+arms. She talks about how scared she is while crying into Kyoshika's chest.
+Kyoshika starts crying too, and admits she was scared too, and that her 
+claims of wanting to be seen as making a heroic sacrifice were to mask her
+fear and prevent the others from trying to dissuade her. The two embrace for
+a long while <del>and maybe kiss</del>. After taking the poison, Kyoshika
+continues holding Tsubasa to help handle the pain.
+</p>
 
 <h3>Appendix? I guess?</h3>
 
