--- a/thorts/thoughts_100.html
+++ b/thorts/thoughts_100.html
@@ -422,11 +422,11 @@ putting herself first for once in her life. and uh... I'll expand on this later.
 
 
 <p>
-okay that's probably pretty cringy/corny/hacky/etc... (obligatory thing I had
+okay that's probably pretty cringy/corny/hacky/basic/etc... (obligatory thing I had
 to write to slightly lower my own embarrassment at what I'm writing.)
 </p>
 
-<img src="imgs/tsubasa_fanfic.jpg" alt="Tsubasa screaming in embarassment at Takumi reading the fanfic she wrote in middle school" title="How I feel when someone reads my terrible fanfic plotting." style="width:50%">
+<img src="imgs/tsubasa_fanfic.jpg" alt="Tsubasa screaming in embarassment at Takumi reading the fanfic she wrote in middle school" title="How I feel when someone reads my terrible fanfic plotting... or any of my writing, for that matter." style="width:50%">
 
 <p>
 *This is something I thought up while thinking of another possible route. It doesn't
@@ -449,6 +449,134 @@ fear and prevent the others from trying to dissuade her. The two embrace for
 a long while <del>and maybe kiss</del>. After taking the poison, Kyoshika
 continues holding Tsubasa to help handle the pain.
 </p>
+
+<h3>So about that DLC...</h3>
+
+<p>
+Okay, I know I've made jokes about how there wouldn't be DLC for this game,
+and then Kodaka just... said "I want as much DLC as possible." (remember
+to actually write something here later)
+</p>
+
+<p>
+Anyway, remember that point I mentioned about having an alternate version
+of the 2nd Scenario, but with Kyoshika? IMO it would make sense for it to
+have Darumi, Kyoshika, and Kurara make it to the (almost) end, since they
+don't have a 6th bond event as result. There's some pretty obvious options;
+Kurara feels the relief of no longer having to represent the "Oosuzuki Family",
+Kyoshika learns/realises that her ethos/viewpoint of striking down "the wicked"
+is itself harmful and part of what allowed her to engage in atrocities (as opposed to just
+thinking that she had the wrong target). And for Darumi... uh... I haven't seen
+enough of her routes to know. Though, they would have to have someone else die
+in their place. e.g. Takemaru for Kyoshika, Shouma or Hiruko for Darumi, and...
+maybe Tsubasa for Kurara? For Darumi, I guess it would work for her to be revived,
+but at the cost of someone else's life/hemoanima (most likely Shouma or Hiruko). Maybe
+Yugamu could figure out a way to do this (possibly using a bit of Kyoshika's blood
+as a catalyst).
+</p>
+
+<p>
+(oh god they're just writing more terrible fanfic plots)
+<br>
+Hush, you... I mean, Hush... me?
+</p>
+
+<p>
+(also my headcanon is that Kyoshika's memorie <i>are</i> real (more or less),
+but she was actually under surveillance by... uh... whoever was in charge
+of the project. If anyone's memories were actually real, it would make sense
+for it to be hers, since she was completely isolated from the outside world.)
+</p>
+
+<p>
+Anyways, at the end Kyoshika ends up being the one to absorb everyone else's
+cryptoglobin and finish everything off, but somehow ends up surviving. I've had
+a couple ideas of what to do after this, one that would just be an ending, and
+another that would continue onto a whole other round of routes.
+</p>
+
+<p>
+In the simpler version, Kyoshika is overcome with grief at having killed her
+only friends, and starts burning with eternal flames. Nozomi sees this and
+immediately goes and embraces her, despite the flames burning both of them.
+Kyoshika asks Nozomi to let go, but she refuses. Eventually, the flames stop
+burning, leaving Nozomi somewhat disfigured. Kyoshika feels guilty, but Nozomi
+smiles and tells her that it was a small price to pay to save Kyoshika. Kyoshika
+starts crying again, and Nozomi embraces her and tells her that she loves her.
+</p>
+
+<p>
+You know, something about how our trauma can hurt those we love, but it's still
+worthwhile to reach out share in that trauma. Someone else can probably summarise
+this much better than I can.
+</p>
+
+<img src="imgs/hand_hold.gif" alt="The hand-holding scene from the end of Mawaru Penguindrum episode 15. Momoka reaches out her bandaged hand to hold Yuri's hand, who recoils slightly at being held. After some trepidation, she reaches out her other hand to hold onto Momoka's hand." title="I just wanted a reason to use this gif." style="width:50%">
+
+<p>
+The, uh, other possibility was that Kyoshika finds out she can go back in time
+to repeat the 100 days, but with her friends' absorbed hemoanima. She realises
+she could just go back in time repeatedly and absorb her friends' hemoanima each
+time. Then, she could stop possibly go back in time to stop humanity from ever
+reaching Futurus in the first place (or even stopping World Death). 
+Nozomi is horrified at this plan and desperately begs for her to reconsider,
+discussing the possibility of raising a family together, all the things they could
+do together, and even the kinky things she wants do with Kyoshika. When she gets
+desperate, she tries to guilt Kyoshika by asking whether she's okay with leaving
+Nozomi alone and making her lose another friend. 
+</p>
+
+<p>
+If Kyoshika relents, Nozomi apologises for manipulating her, but says that she 
+genuinely wants to start a family with her. We then see a montage of their lives
+together, while Kyoshika narrates that she still felt guilty about deciding not
+to go through with her plan, but she keeps up appearances to make Nozomi (and
+maybe Kamyuhn) happy.
+</p>
+
+<p>
+If Kyoshika <i>does</i> decide to go through with the plan, Nozomi cries (more)
+and tells Kyoshika that if she ever gives up on her plan, that timeline's Nozomi
+would (likely) happily start a relationship with her. She then asks for one more
+"night" together with Kyoshika, who obliges.
+</p>
+
+<p>
+The way you could get both/all three possibilities would be to have Takumi decide
+how to motivate Kyoshika in the final battle. If he says "You're the only one who
+can do this!", it leads to the pair of options where Kyoshika wants to go back in
+time, since it just feeds her unhealthy obsession with taking all the burden onto
+herself and not actually thinking about her own wants.
+</p>
+
+<p>
+On the other hand if he says... something else (I haven't come up with a good 
+possibility, other than maybe "You don't have to do this"), it would lead to 
+the burning ending.
+</p>
+
+<p>
+Another thing about the route is that, at the Day 15 choice point, the correct
+choice would be to "choose" Kyoshika at first, but then after hearing her talk,
+have Takumi remember what she said about being lonely and wanting friends, which
+gives him the option to change his mind. After hearing Takumi's reasoning,
+Takemaru would immediately agree to detonate the bomb, and then make Kyoshika
+promise to make as many good memories with her friends as possible.
+<br>
+After this, Takumi would feel surprisingly good about his choice, but then
+Shion would come to warn him not to feel too certain about his choices, in an
+inversion of what he would usually say.
+</p>
+
+<p>
+Also one more idea I had for this route was that, instead of Moko going back to
+2nd-last defense academy to get the Holy Jumonji Sword's pajamas to mark Kyoshika's
+grave, Kurara would try to go back to get them to thank Kyoshika (and possibly to
+confess to her). However, after getting attacked, her tomato mask gets completely
+destroyed, and instead, she doesn't wear it for the rest of the route. Also I just
+want to see her cry hugging Kyoshika and asking her why she's so eager to die.
+</p>
+
 
 <h3>Appendix? I guess?</h3>
 
